--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,3 @@
-/**
-* Template Name: ComingSoon - v4.3.0
-* Template URL: https://bootstrapmade.com/comingsoon-free-html-bootstrap-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -38,7 +31,7 @@ a {
 }
 
 a:hover {
-  color: #ff3333;
+  color: #D4088C;
   text-decoration: none;
 }
 
@@ -60,7 +53,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #ff0000;
+  background: #D4088C;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -74,7 +67,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .back-to-top:hover {
-  background: #ff2929;
+  background: #101340;
   color: #fff;
 }
 
@@ -117,8 +110,10 @@ h1, h2, h3, h4, h5, h6 {
   width: 100px;
   padding: 15px 0;
   background: rgba(255, 255, 255, 0.12);
-  border-top: 5px solid #ff0000;
+  border-top: 5px solid #D4088C;
+  border-bottom: 5px solid #00a4bd;
 }
+
 
 #header .countdown div h3 {
   font-weight: 700;
@@ -184,14 +179,15 @@ h1, h2, h3, h4, h5, h6 {
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #ff0000;
+  background: #101340
+  ;
   color: #fff;
   transition: 0.3s;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
 
 #header .subscribe .subscribe-form input[type="submit"]:hover {
-  background: #f50000;
+  background: #D4088C;
 }
 
 #header .subscribe .error-message {
@@ -223,7 +219,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 24px;
   height: 24px;
   margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
+  border: 3px solid #00a4bd;
   border-top-color: #eee;
   -webkit-animation: animate-loading-notify 1s linear infinite;
   animation: animate-loading-notify 1s linear infinite;
@@ -325,7 +321,7 @@ section {
   top: 12px;
   position: absolute;
   font-size: 20px;
-  color: #ff0000;
+  color: #D4088C;
 }
 
 .about .content p:last-child {
@@ -391,12 +387,12 @@ section {
 }
 
 .contact .info .social-links a:hover {
-  background: #ff0000;
+  background: #D4088C;
   color: #fff;
 }
 
 .contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
-  background: #ff0000;
+  background: #D4088C;
   color: #fff;
 }
 
@@ -413,7 +409,7 @@ section {
 
 .contact .php-email-form .validate {
   display: none;
-  color: red;
+  color: #D4088C;
   margin: 0 0 15px 0;
   font-weight: 400;
   font-size: 13px;
@@ -487,7 +483,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #ff0000;
+  background: #D4088C;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -495,7 +491,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"]:hover {
-  background: #ff3333;
+  background: #101340;
 }
 
 @-webkit-keyframes animate-loading {
@@ -539,5 +535,28 @@ section {
 }
 
 #footer .credits a {
-  color: #ff3333;
+  color: #D4088C;
+}
+
+::-webkit-scrollbar {
+  width: 2.5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px #00a4bd; 
+  border-radius: 5px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #101340; 
+  border-radius: 10px;
+  height: 10px;
+
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #D4088C; 
 }
